--- a/static-web/package.json
+++ b/static-web/package.json
@@ -43,6 +43,7 @@
   },
   "devDependencies": {
     "@types/styled-components": "^5.1.20",
+    "mini-css-extract-plugin": "2.5.3",
     "typescript": "^4.5.4"
   }
 }
