--- a/static-web/package.json
+++ b/static-web/package.json
@@ -1,5 +1,6 @@
 {
   "name": "static-web",
+  "homepage": "./",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -15,7 +16,8 @@
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
     "styled-components": "^5.3.3",
-    "web-vitals": "^2.1.3"
+    "web-vitals": "^2.1.3",
+    "xlsx": "^0.17.5"
   },
   "scripts": {
     "start": "react-scripts start",
